examples/diagnostics/errors/ModuleInvalidContentError.flx
// Triggers E019 (INVALID MODULE CONTENT)
module Errors.ModuleInvalidContentError {
  let x = 1;
}
